# Group4Project_root_created_251214

./: 00main.py  01festo.py  02logitech.py  1211DobotSample.py  DobotDllType.py  InterpretPlayback.py  README.md  README2.md  README3.md  config.py  export_to_script.py  main.py  pyproject.toml
1211dobotteaching/: R1.csv  R1.playback  R2.csv  R2.playback  main.py  pyproject.toml
data/: r1.playback  waypoints_r1.csv
plc/: __init__.py  plc_client.py
robot/: __init__.py  robot_base.py  robot_r1.py  robot_r2.py  robot_r3.py
utils/: auto_convert.py  logger.py  playback_to_csv.py
